copy paste objects from one instance of blender to another instance results in immediate crash of instance being pasted into. #74670

Closed
opened 2020-03-12 00:08:50 +01:00 by michael campbell · 15 comments

System Information
Operating system: Windows-10-10.0.17134-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-06 22:46, hash: dcdcc23488
Worked: (optional)

Short description of error
copy paste objects from one instance of blender to another instance results in immediate crash of instance being pasted into.

Exact steps for others to reproduce the error
open below file, select the object, copy it, paste it into another instance of blender. Crash also occurs if you paste it back into the same instance of blender. The issue seems to be material related, because if the material is removed from the object, the crash doesn't happen. Happens with or without the copy attributes addon enabled.

copy paste bug textures removed1.blend

**System Information** Operating system: Windows-10-10.0.17134-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-06 22:46, hash: `dcdcc23488` Worked: (optional) **Short description of error** copy paste objects from one instance of blender to another instance results in immediate crash of instance being pasted into. **Exact steps for others to reproduce the error** open below file, select the object, copy it, paste it into another instance of blender. Crash also occurs if you paste it back into the same instance of blender. The issue seems to be material related, because if the material is removed from the object, the crash doesn't happen. Happens with or without the copy attributes addon enabled. [copy paste bug textures removed1.blend](https://archive.blender.org/developer/F8401442/copy_paste_bug_textures_removed1.blend)

Added subscriber: @3di

Added subscriber: @3di

Just tested in today's 2.83 alpha build and the problem is still there.

Just tested in today's 2.83 alpha build and the problem is still there.

Just tested in the below build, and the problem is not there.

image.png

Just tested in the below build, and the problem is not there. ![image.png](https://archive.blender.org/developer/F8401449/image.png)
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Ankit Meel self-assigned this 2020-03-12 08:22:29 +01:00
Member

Thanks for the report!
Please comment or reopen the report if the issue comes back

Thanks for the report! Please comment or reopen the report if the issue comes back

Hi Ankit, you've closed this in Error, the bug has not been fixed.

Hi Ankit, you've closed this in Error, the bug has not been fixed.
Ankit Meel removed their assignment 2020-03-12 12:19:54 +01:00
Member

Changed status from 'Resolved' to: 'Needs Triage'

Changed status from 'Resolved' to: 'Needs Triage'
Member

Oh misread the date.. bisecting now. Thanks for providing a working build

Oh misread the date.. bisecting now. Thanks for providing a working build

In #74670#889619, @3di wrote:
Just tested in the below build, and the problem is not there.

image.png

This is an older build, the bug is still present in current builds.

> In #74670#889619, @3di wrote: > Just tested in the below build, and the problem is not there. > > ![image.png](https://archive.blender.org/developer/F8401449/image.png) This is an older build, the bug is still present in current builds.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

caused by 4e597a5cff cc @mont29

caused by 4e597a5cff cc @mont29
Bastien Montagne self-assigned this 2020-03-12 16:32:27 +01:00

This issue was referenced by 11e4827738

This issue was referenced by 11e48277386c1811507878e3ffe7f7e10e26ac20

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74670
No description provided.